Add photo to header

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <img class="hero-bg" src="assets/Posh_sticker-logo-AddHair.png" alt="Modern salon interior with warm copper accents" loading="eager" decoding="async" />
     <div class="hero-inner">
       <!-- UPDATE: Colorful poster logo. Put file at /assets/Posh_Colorful-1.png -->
-      <img class="hero-logo" src="assets/Posh_Colorful-1.png" alt="POSH Innovative Artistry" />
+      <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH Innovative Artistry" />
       <p class="hero-tag">Independent artists under one roof. Book directly with your pro at POSH.</p>
       <div class="hero-ctas">
         <a class="btn btn-primary" href="#artists">Meet the Artists</a>
