add candle photo for twig and vine

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Hero -->
   <section class="hero">
     <!-- UPDATE: Hero background photo (safe placeholder now) -->
-    <img class="hero-bg" src="assets/Posh_sticker-logo-AddHair.png" alt="Modern salon interior with warm copper accents" loading="eager" decoding="async" />
+    <img class="hero-bg" src="" alt="Modern salon interior with warm copper accents" loading="eager" decoding="async" />
     <div class="hero-inner">
       <!-- UPDATE: Colorful poster logo. Put file at /assets/Posh_Colorful-1.png -->
       <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH Innovative Artistry" />
@@ -126,7 +126,7 @@
       <article class="card" tabindex="0">
         <div class="media">
           <!-- UPDATE: Replace with real display shot of the Twig & Vine corner -->
-          <img src="https://picsum.photos/seed/twig-vine-3/800/600" alt="Twig & Vine Candle Co. display" loading="lazy" decoding="async" />
+          <img src="assets/twig&vine_candle-image.jpg" alt="Twig & Vine Candle Co. display" loading="lazy" decoding="async" />
         </div>
         <div class="body">
           <h3>Twig &amp; Vine Candle Co.</h3>
