--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Hero -->
   <section class="hero">
     <!-- UPDATE: Hero background photo (safe placeholder now) -->
-    <img class="hero-bg" src="" alt="Modern salon interior with warm copper accents" loading="eager" decoding="async" />
+    <img class="hero-bg" src="assets/Makeup-brushes.jpg" alt="Modern salon interior with warm copper accents" loading="eager" decoding="async" />
     <div class="hero-inner">
       <!-- UPDATE: Colorful poster logo. Put file at /assets/Posh_Colorful-1.png -->
       <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH Innovative Artistry" />
