Correct spelling in html for 'Aesthetics'

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <select id="serviceFilter">
         <option value="all">All services</option>
         <option value="hair">Hair</option>
-        <option value="esthetics">Esthetics</option>
+        <option value="esthetics">Aesthetics</option>
         <option value="injectables">Injectables</option>
       </select>
     </div>
