Replaced images picked by Ai with more relevant temp imgs

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
 
     <div class="gallery-grid">
       <!-- UPDATE: swap these with real salon/work images -->
-      <img src="https://picsum.photos/seed/posh-ga/800/600" alt="Salon workstation" loading="lazy" />
-      <img src="https://picsum.photos/seed/posh-gb/800/600" alt="Hair color process" loading="lazy" />
-      <img src="https://picsum.photos/seed/posh-gc/800/600" alt="Skin care products" loading="lazy" />
-      <img src="https://picsum.photos/seed/posh-gd/800/600" alt="Injectables consultation room" loading="lazy" />
-      <img src="https://picsum.photos/seed/posh-ge/800/600" alt="Salon lounge" loading="lazy" />
-      <img src="https://picsum.photos/seed/posh-gf/800/600" alt="Front desk" loading="lazy" />
+      <img src="assets/placeholder-img-1.jpg" alt="Shampoo bowl washing hair" loading="lazy" />
+      <img src="assets/Placeholder-img-2-dark-hair-braid.jpg" alt="Dark hair braided" loading="lazy" />
+      <img src="assets/placeholder-img-3-salon-friends.jpg" alt="Salon friends with hand in air holding hair tools" loading="lazy" />
+      <img src="assets/Posh-backroom-edit.jpg" alt="A streamlined back room inside Posh" loading="lazy" />
+      <img src="assets/placeholder-img-4-facework.jpg" alt="Laser treatment on a womans face" loading="lazy" />
+      <img src="assets/placeholder-img-5-facial.jpg" alt="Woman receiving a professional facial" loading="lazy" />
     </div>
   </section>
 
