Make relevant changes to JSON-LD data for SEO

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   {
     "@context": "https://schema.org",
     "@type": "HairSalon",
-    "name": "POSH — Innovative Artistry",
+    "name": "POSH",
     "image": "assets/Posh_Colorful-1.png",
-    "url": "https://example.com",
+    "url": "https://poshnewberg.netlify.app",
     "telephone": "(503) 538-7056",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "123 E Main St Suite 200",
+      "streetAddress": "503 E 1st St",
       "addressLocality": "Newberg",
       "addressRegion": "OR",
       "postalCode": "97132",
@@ -103,7 +103,7 @@
       <select id="serviceFilter">
         <option value="all">All services</option>
         <option value="hair">Hair</option>
-        <option value="esthetics">Aesthetics</option>
+        <option value="esthetics">Esthetics</option>
         <option value="injectables">Injectables</option>
       </select>
     </div>
