Add to footer - update email and address

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
       <aside class="contact-info">
         <div class="card">
           <h3>POSH — Innovative Artistry</h3>
-          <p>123 E Main St, Suite 200<br/>Newberg, OR 97132</p>
+          <p>503 E 1st St<br/>Newberg, OR 97132</p>
           <p>
             <!-- UPDATE: main phone/email -->
             <a href="tel:+15035387056">(503) 538-7056</a><br/>
-            <a href="mailto:hello@poshnewberg.com">hello@poshnewberg.com</a>
+            <a href="mailto:firststreetposh@gmail.com">frontdesk@poshnewberg.com</a>
           </p>
           <p><strong>Hours</strong><br/>Tue–Fri 10am–6pm • Sat by appt</p>
           <div class="socials">
