Change 'mailto:...' to match the href in html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     "@type": "HairSalon",
     "name": "POSH",
     "image": "assets/Posh_Colorful-1.png",
-    "url": "https://poshnewberg.netlify.app",
+    "url": "https://poshnewberg.com",
     "telephone": "(503) 538-7056",
     "address": {
       "@type": "PostalAddress",
@@ -247,7 +247,7 @@
           <p>
             <!-- UPDATE: main phone/email -->
             <a href="tel:+15035387056">(503) 538-7056</a><br/>
-            <a href="mailto:firststreetposh@gmail.com">frontdesk@poshnewberg.com</a>
+            <a href="mailto:firststreetposh@gmail.com">firststreetposh@gmail.com</a>
           </p>
           <p><strong>Hours</strong><br/>Tue–Fri 10am–6pm • Sat by appt</p>
           <div class="socials">
