--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="preload" href="styles.css" as="style" />
   <link rel="stylesheet" href="styles.css" />
 
+  <!-- Fontawesome (icons) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <!-- Favicon (optional) -->
   <!-- UPDATE: add a favicon to /assets and point to it -->
   <link rel="icon" href="assets/favicon.ico" />
@@ -251,10 +254,14 @@
           </p>
           <p><strong>Hours</strong><br/>Tue–Fri 10am–6pm • Sat by appt</p>
           <div class="socials">
-            <!-- UPDATE: link real accounts -->
-            <a href="#" aria-label="Instagram">Instagram</a>
-            <a href="#" aria-label="Facebook">Facebook</a>
+            <a href="#" target="_blank" rel="noopener" aria-label="Instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" target="_blank" rel="noopener" aria-label="Facebook">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
           </div>
+
         </div>
 
         <div class="map">
