Add alt text for seo

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
   <!-- Hero -->
   <section class="hero">
     <!-- UPDATE: Hero background photo (safe placeholder now) -->
-    <img class="hero-bg" src="assets/Makeup-brushes.jpg" alt="Modern salon interior with warm copper accents" loading="eager" decoding="async" />
+    <img class="hero-bg" src="assets/Makeup-brushes.jpg" alt="Modern salon interior and makeup brushes with warm copper accents" loading="eager" decoding="async" />
     <div class="hero-inner">
       <!-- UPDATE: Colorful poster logo. Put file at /assets/Posh_Colorful-1.png -->
-      <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH Innovative Artistry" />
+      <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH - Innovative Artistry logo" />
       <p class="hero-tag">Independent artists under one roof. Book directly with your pro at POSH.</p>
       <div class="hero-ctas">
         <a class="btn btn-primary" href="#artists">Meet the Artists</a>
@@ -129,7 +129,7 @@
       <article class="card" tabindex="0">
         <div class="media">
           <!-- UPDATE: Replace with real display shot of the Twig & Vine corner -->
-          <img src="assets/twig&vine_candle-image.jpg" alt="Twig & Vine Candle Co. display" loading="lazy" decoding="async" />
+          <img src="assets/twig&vine_candle-image.jpg" alt="Twig & Vine Candle Co. display at POSH in Newberg" loading="lazy" decoding="async" />
         </div>
         <div class="body">
           <h3>Twig &amp; Vine Candle Co.</h3>
@@ -194,8 +194,8 @@
       <!-- UPDATE: swap these with real salon/work images -->
       <img src="assets/placeholder-img-1.jpg" alt="Shampoo bowl washing hair" loading="lazy" />
       <img src="assets/Placeholder-img-2-dark-hair-braid.jpg" alt="Dark hair braided" loading="lazy" />
-      <img src="assets/placeholder-img-3-salon-friends.jpg" alt="Salon friends with hand in air holding hair tools" loading="lazy" />
-      <img src="assets/Posh-backroom-edit.jpg" alt="A streamlined back room inside Posh" loading="lazy" />
+      <img src="assets/placeholder-img-3-salon-friends.jpg" alt="Salon friends with hands in air holding hair tools" loading="lazy" />
+      <img src="assets/Posh-backroom-edit.jpg" alt="A streamlined back room inside POSH" loading="lazy" />
       <img src="assets/placeholder-img-4-facework.jpg" alt="Laser treatment on a womans face" loading="lazy" />
       <img src="assets/placeholder-img-5-facial.jpg" alt="Woman receiving a professional facial" loading="lazy" />
     </div>
