Add and update meta+links & ld+json for seo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>POSH — Innovative Artistry | Newberg, OR</title>
-  <meta name="description" content="POSH | Innovative Artistry — Hair, esthetics, and injectables in Newberg, Oregon. Book directly with our independent pros and shop Twig & Vine candles in-house." />
-
+  <title>POSH — Hair, Esthetics & Injectables in Newberg, Oregon</title>
+  <meta name="description" content="POSH offers hair styling, esthetics, injectables, and artisan goods in Newberg, Oregon. Book directly with our independent artists or shop Twig & Vine candles in-house." />
   <!-- Styles -->
   <link rel="preload" href="styles.css" as="style" />
   <link rel="stylesheet" href="styles.css" />
@@ -19,11 +18,16 @@
 
   <meta name="theme-color" content="#b46b36" />
 
+  <!-- Canonical URL (for google ranking) -->
+  <link rel="canonical" href="https://poshnewberg.com" />
+
   <!-- Open Graph -->
   <meta property="og:title" content="POSH — Innovative Artistry" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://poshnewberg.com" />
   <meta property="og:description" content="Hair • Esthetics • Injectables. Book with our artists at POSH in Newberg, OR." />
   <!-- UPDATE: Use your colorful logo for link shares -->
-  <meta property="og:image" content="assets/Posh_Colorful-1.png" />
+  <meta property="og:image" content="https://poshnewberg.com/assets/Posh_Colorful-1.png" />
 
   <!-- LocalBusiness JSON-LD (update address/email when you have them) -->
   <script type="application/ld+json">
@@ -31,7 +35,7 @@
     "@context": "https://schema.org",
     "@type": "HairSalon",
     "name": "POSH",
-    "image": "assets/Posh_Colorful-1.png",
+    "image": "https://poshnewberg.com/assets/Posh_Colorful-1.png",
     "url": "https://poshnewberg.com",
     "telephone": "(503) 538-7056",
     "address": {
