Fine tune json ld and meta title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="canonical" href="https://poshnewberg.com" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="POSH — Innovative Artistry" />
+  <meta property="og:title" content="POSH — Hair, Esthetics & Injectables in Newberg, Oregon" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://poshnewberg.com" />
   <meta property="og:description" content="Hair • Esthetics • Injectables. Book with our artists at POSH in Newberg, OR." />
@@ -35,7 +35,9 @@
     "@context": "https://schema.org",
     "@type": "HairSalon",
     "name": "POSH",
-    "image": "https://poshnewberg.com/assets/Posh_Colorful-1.png",
+    "image": [
+      "https://poshnewberg.com/assets/Posh_Colorful-1.png"
+    ],
     "url": "https://poshnewberg.com",
     "telephone": "(503) 538-7056",
     "address": {
