Comment out socials in html
prevents false seo claims of having an instagram or facebook account, remove comment when posh creates social media

--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@
             <a href="mailto:firststreetposh@gmail.com">firststreetposh@gmail.com</a>
           </p>
           <p><strong>Hours</strong><br/>Tue–Fri 10am–6pm • Sat by appt</p>
+          <!--  Remove comment when FB & IG are created
+
           <div class="socials">
             <a href="#" target="_blank" rel="noopener" aria-label="Instagram">
               <i class="fa-brands fa-instagram"></i>
@@ -267,6 +269,8 @@
               <i class="fa-brands fa-facebook"></i>
             </a>
           </div>
+          
+        -->
 
         </div>
 
