--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <div class="hero-inner">
       <!-- UPDATE: Colorful poster logo. Put file at /assets/Posh_Colorful-1.png -->
       <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH - Innovative Artistry logo" />
+      <h1>POSH — Hair, Esthetics &amp; Injectables in Newberg, Oregon</h1>
       <p class="hero-tag">Independent artists under one roof. Book directly with your pro at POSH.</p>
       <div class="hero-ctas">
         <a class="btn btn-primary" href="#artists">Meet the Artists</a>
@@ -269,7 +270,7 @@
               <i class="fa-brands fa-facebook"></i>
             </a>
           </div>
-          
+
         -->
 
         </div>
