Upgrade hero title and h1
adds a more elegant look with polish to the title of the hero section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
     <div class="hero-inner">
       <!-- UPDATE: Colorful poster logo. Put file at /assets/Posh_Colorful-1.png -->
       <img class="hero-logo" src="assets/Posh_sticker-logo-AddHair.png" alt="POSH - Innovative Artistry logo" />
-      <h1>POSH — Hair, Esthetics &amp; Injectables in Newberg, Oregon</h1>
+      <h1 class="hero-title">
+        <span class="hero-title-line">POSH — Innovative Artistry</span>
+        <span class="hero-title-subline">Hair, Esthetics &amp; Injectables in Newberg, Oregon</span>
+      </h1>
+
       <p class="hero-tag">Independent artists under one roof. Book directly with your pro at POSH.</p>
       <div class="hero-ctas">
         <a class="btn btn-primary" href="#artists">Meet the Artists</a>
