Edit map info to match exact address

--- a/index.html
+++ b/index.html
@@ -316,12 +316,11 @@
         </div>
 
         <div class="map">
-          <!-- UPDATE: Replace with exact map embed once address is final -->
-          <iframe
-            title="POSH location map"
-            loading="lazy"
+          <iframe 
+            title="POSH location map" 
+            loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps?q=Newberg%20OR&output=embed">
+            src="https://www.google.com/maps?q=503+E+1st+St+Newberg+OR+97132&output=embed">
           </iframe>
         </div>
       </aside>
